--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body,html{
     height: 90%;
     width: 99.69%;
     /* font-family: Bruno Ace SC; */
-    background-image: url("rainbow-color-gradation-blur-wallpaper-preview.jpg");
+    background-color: blue;
     background-repeat: no-repeat;
     background-size: cover;
 }
